--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -17,8 +17,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp"
         android:orientation="vertical"
-        android:gravity="center"
-    >
+        android:gravity="center" >
 
 
     <TextView
@@ -41,7 +40,7 @@
             android:layout_alignParentEnd="false"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="36dp"
-            android:src="@drawable/fotodell" />
+            android:src="@drawable/load" />
 
 
         <LinearLayout
@@ -144,7 +143,7 @@ Almacenamiento SSD 160GB, Tarjetas de video: Intel HD Graphics (Legacy) (Integra
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="0dp"
-                android:text="Precio: "
+                android:text="Precio: $ "
                 android:textSize="30dp" />
 
             <TextView
@@ -153,7 +152,7 @@ Almacenamiento SSD 160GB, Tarjetas de video: Intel HD Graphics (Legacy) (Integra
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@id/precio_titulo"
                 android:layout_toRightOf="@id/precio_titulo"
-                android:text="$10000"
+                android:text=""
                 android:textSize="30dp" />
 
         </RelativeLayout>
@@ -178,7 +177,7 @@ Almacenamiento SSD 160GB, Tarjetas de video: Intel HD Graphics (Legacy) (Integra
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@id/cantidad_inicial_text"
                 android:layout_toRightOf="@id/cantidad_inicial_text"
-                android:text="10" />
+                android:text="" />
 
             <TextView
                 android:id="@+id/cantidad_vendidos_text"
@@ -195,14 +194,14 @@ Almacenamiento SSD 160GB, Tarjetas de video: Intel HD Graphics (Legacy) (Integra
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@id/cantidad_vendidos_text"
                 android:layout_toRightOf="@id/cantidad_vendidos_text"
-                android:text="3" />
+                android:text="" />
 
             <TextView
                 android:id="@+id/cantidad_actual_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/cantidad_vendidos"
-                android:layout_alignStart="@id/cantidad_inicial_text"
+                android:layout_below="@id/cantidad_vendidos_text"
+                android:layout_alignStart="@id/cantidad_vendidos_text"
                 android:text="Cantidad en Stock:" />
 
             <TextView
@@ -211,7 +210,7 @@ Almacenamiento SSD 160GB, Tarjetas de video: Intel HD Graphics (Legacy) (Integra
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@id/cantidad_actual_text"
                 android:layout_toRightOf="@id/cantidad_actual_text"
-                android:text="7" />
+                android:text="" />
 
         </RelativeLayout>
 
