--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -56,7 +56,7 @@
                     android:layout_width="138dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="0dp"
-                    app:srcCompat="@drawable/fotodell" />
+                    app:srcCompat="@drawable/load" />
 
                 <TextView
                     android:id="@+id/titulo_list"
@@ -69,12 +69,21 @@
                     />
 
                 <TextView
-                    android:id="@+id/precio_list"
+                    android:id="@+id/signo_peso"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/titulo_list"
                     android:layout_alignStart="@id/titulo_list"
-                    android:text="@string/precio"
+                    android:text="@string/signo"
+                    android:textSize="22dp" />
+
+                <TextView
+                    android:id="@+id/precio_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/titulo_list"
+                    android:layout_toEndOf="@id/signo_peso"
+                    android:text=""
                     android:textSize="22dp" />
 
             </RelativeLayout>
