los items de la lista ya tienen formato (falta foto)

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -25,10 +25,13 @@
         android:textSize="20sp"
         android:layout_margin="20dp"/>
 
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tv_resultado"
+        />
 
 </RelativeLayout>
 
