--- a/app/src/main/res/layout/item_articulo.xml
+++ b/app/src/main/res/layout/item_articulo.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
     android:paddingLeft="12dp"
     android:paddingTop="16dp"
     android:paddingRight="12dp">
 
-    <TextView
+    <!--TextView
         android:id="@+id/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,6 +32,43 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#000000"
-        android:layout_below="@+id/precio" />
+        android:layout_below="@+id/precio" /-->
+
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="0dp"
+        app:srcCompat="@drawable/load" />
+
+    <TextView
+        android:id="@+id/titulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_toEndOf="@id/img"
+        android:text="@string/txt_titulo"
+        android:layout_marginRight="20dp"
+        />
+
+    <TextView
+        android:id="@+id/signo_peso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/titulo"
+        android:layout_alignStart="@id/titulo"
+        android:text="@string/signo"
+        android:textSize="22dp" />
+
+    <TextView
+        android:id="@+id/precio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/titulo"
+        android:layout_toEndOf="@id/signo_peso"
+        android:text=""
+        android:textSize="22dp" />
 
 </RelativeLayout>
+
+
