--- a/app/src/main/res/layout/item_articulo.xml
+++ b/app/src/main/res/layout/item_articulo.xml
@@ -1,38 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#ffffff"
+    android:background="#dccac6"
     android:paddingLeft="12dp"
-    android:paddingTop="16dp"
-    android:paddingRight="12dp">
+    android:paddingTop="12dp"
+    android:paddingRight="12dp"
+    android:paddingBottom="12dp"
+    >
 
-    <!--TextView
-        android:id="@+id/titulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Titulo del artículo"
-        android:textColor="#000000"
-        android:textSize="21sp" />
-
-    <TextView android:id="@+id/precio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/titulo"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="16dp"
-        android:text="$ 500"
-        android:textColor="#000000"
-        android:textSize="21sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000000"
-        android:layout_below="@+id/precio" /-->
 
     <ImageView
         android:id="@+id/img"
@@ -43,7 +22,7 @@
 
     <TextView
         android:id="@+id/titulo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_toEndOf="@id/img"
@@ -58,7 +37,7 @@
         android:layout_below="@id/titulo"
         android:layout_alignStart="@id/titulo"
         android:text="@string/signo"
-        android:textSize="22dp" />
+        android:textSize="25dp" />
 
     <TextView
         android:id="@+id/precio"
@@ -67,7 +46,7 @@
         android:layout_below="@id/titulo"
         android:layout_toEndOf="@id/signo_peso"
         android:text=""
-        android:textSize="22dp" />
+        android:textSize="25dp" />
 
 </RelativeLayout>
 
