--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -42,6 +42,16 @@
             android:layout_marginTop="36dp"
             android:src="@drawable/load" />
 
+        <TextView
+            android:id="@+id/nuevo_usado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/img"
+            android:layout_centerHorizontal="true"
+            android:text="Nuevo "
+            android:textSize="25dp"
+            android:layout_margin="2dp"
+        />
 
         <LinearLayout
             android:id="@+id/datos"
@@ -51,22 +61,13 @@
             android:layout_centerHorizontal="true">
 
             <TextView
-                android:id="@+id/nuevo_usado"
+                android:id="@+id/garantia"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/img"
-                android:layout_centerHorizontal="true"
-                android:text="Nuevo "
-                />
 
-            <TextView
-            android:id="@+id/garantia"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/nuevo_usado"
-            android:layout_centerHorizontal="true"
-            android:layout_toRightOf="@id/nuevo_usado"
-            android:text=" " />
+                android:layout_below="@id/nuevo_usado"
+                android:layout_centerHorizontal="true"
+                android:text="" />
 
             <TextView
                 android:id="@+id/tiempo_garantia"
@@ -74,35 +75,20 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@id/nuevo_usado"
                 android:layout_centerHorizontal="true"
-                android:layout_toRightOf="@id/nuevo_usado"
-                android:text=" " />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="Finaliza: " />
-
-            <TextView
-                android:id="@+id/finaliza2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="24/06/2019" />
+                android:layout_toRightOf="@id/garantia"
+                android:text="" />
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/descripcion_texto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/img"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Procesador: Intel Core i5 540M (2533 MHz - 3067 MHz)
-RAM 4GB DDR3 (1066 MHz), Pantalla: LED 14.1 (1280x800), Batería 6 celdas (60000 mWh)
-Almacenamiento SSD 160GB, Tarjetas de video: Intel HD Graphics (Legacy) (Integrada)" />
+    <TextView
+        android:id="@+id/descripcion_texto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/img"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:text="La descripcion no esta disponible" />
 
         <LinearLayout
             android:id="@+id/opiniones"
@@ -112,17 +98,6 @@ Almacenamiento SSD 160GB, Tarjetas de video: Intel HD Graphics (Legacy) (Integra
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp">
 
-            <TextView
-                android:id="@+id/cantidad_opiniones"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="104 opiniones " />
-
-            <TextView
-                android:id="@+id/promedio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="3 estrellas" />
 
         </LinearLayout>
 
