--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -8,138 +8,145 @@
     tools:context=".DescriptionActivity">
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-<LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
-        android:orientation="vertical"
-        android:gravity="center" >
-
-
-    <TextView
-        android:id="@+id/titulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="@string/txt_titulo"
-        android:textSize="25dp" />
-
-
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="348dp"
-            android:layout_height="301dp"
-            android:layout_below="@id/titulo"
-            android:layout_alignParentEnd="false"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="36dp"
-            android:src="@drawable/load" />
-
-        <TextView
-            android:id="@+id/nuevo_usado"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/img"
-            android:layout_centerHorizontal="true"
-            android:text="Nuevo "
-            android:textSize="25dp"
-            android:layout_margin="2dp"
-        />
-
         <LinearLayout
-            android:id="@+id/datos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/img"
-            android:layout_centerHorizontal="true">
-
-            <TextView
-                android:id="@+id/garantia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_below="@id/nuevo_usado"
-                android:layout_centerHorizontal="true"
-                android:text="" />
-
-            <TextView
-                android:id="@+id/tiempo_garantia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/nuevo_usado"
-                android:layout_centerHorizontal="true"
-                android:layout_toRightOf="@id/garantia"
-                android:text="" />
-
-        </LinearLayout>
-
-    <TextView
-        android:id="@+id/descripcion_texto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/img"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:text="La descripcion no esta disponible" />
-
-        <LinearLayout
-            android:id="@+id/opiniones"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/descripcion_texto"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp">
-
-
-        </LinearLayout>
-
-        <RelativeLayout
-            android:id="@+id/precio"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/opiniones"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
+            android:background="@drawable/my_background"
+            android:tileMode="repeat"
             android:gravity="center"
-            >
+            android:orientation="vertical">
+
 
             <TextView
-                android:id="@+id/precio_titulo"
+                android:id="@+id/titulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="0dp"
-                android:text="Precio: $ "
-                android:textSize="30dp" />
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginRight="10dp"
+                android:text="@string/txt_titulo"
+                android:textSize="25dp" />
+
+
+            <ImageView
+                android:id="@+id/img"
+                android:layout_width="348dp"
+                android:layout_height="301dp"
+                android:layout_below="@id/titulo"
+                android:layout_alignParentEnd="false"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="36dp"
+                android:src="@drawable/load"
+                android:visibility="gone" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/titulo" />
 
             <TextView
-                android:id="@+id/precio_cantidad"
+                android:id="@+id/nuevo_usado"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/precio_titulo"
-                android:layout_toRightOf="@id/precio_titulo"
-                android:text=""
-                android:textSize="30dp" />
+                android:layout_below="@id/img"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="2dp"
+                android:text="Nuevo "
+                android:textSize="25dp" />
 
-        </RelativeLayout>
+            <LinearLayout
+                android:id="@+id/datos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/img"
+                android:layout_centerHorizontal="true">
 
-        <RelativeLayout
-            android:id="@+id/stock"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/precio"
-            android:layout_centerHorizontal="true">
+                <TextView
+                    android:id="@+id/garantia"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_below="@id/nuevo_usado"
+                    android:layout_centerHorizontal="true"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/tiempo_garantia"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@id/nuevo_usado"
+                    android:layout_centerHorizontal="true"
+                    android:layout_toRightOf="@id/garantia"
+                    android:text="" />
+
+            </LinearLayout>
 
             <TextView
+                android:id="@+id/descripcion_texto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/img"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:text="La descripcion no esta disponible" />
+
+            <LinearLayout
+                android:id="@+id/opiniones"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/descripcion_texto"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp">
+
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/precio"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/opiniones"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/precio_titulo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="0dp"
+                    android:text="Precio: $ "
+                    android:textSize="30dp" />
+
+                <TextView
+                    android:id="@+id/precio_cantidad"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@id/precio_titulo"
+                    android:layout_toRightOf="@id/precio_titulo"
+                    android:text=""
+                    android:textSize="30dp" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/stock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/precio"
+                android:layout_centerHorizontal="true">
+
+                <!--TextView
                 android:id="@+id/cantidad_inicial_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -152,91 +159,88 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@id/cantidad_inicial_text"
                 android:layout_toRightOf="@id/cantidad_inicial_text"
-                android:text="" />
+                android:text="" /-->
 
-            <TextView
-                android:id="@+id/cantidad_vendidos_text"
+                <TextView
+                    android:id="@+id/cantidad_vendidos_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Vendidos:" />
+
+                <TextView
+                    android:id="@+id/cantidad_vendidos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@id/cantidad_vendidos_text"
+                    android:layout_toRightOf="@id/cantidad_vendidos_text"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/cantidad_actual_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/cantidad_vendidos_text"
+                    android:layout_alignStart="@id/cantidad_vendidos_text"
+                    android:text="En Stock:" />
+
+                <TextView
+                    android:id="@+id/cantidad_actual"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@id/cantidad_actual_text"
+                    android:layout_toRightOf="@id/cantidad_actual_text"
+                    android:text="" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/pago"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/cantidad_inicial"
-                android:layout_alignStart="@id/cantidad_inicial_text"
+                android:layout_below="@id/stock"
                 android:layout_centerHorizontal="true"
-                android:text="Cantidad Vendidos:" />
+                android:layout_marginTop="20dp">
 
-            <TextView
-                android:id="@+id/cantidad_vendidos"
+                <TextView
+                    android:id="@+id/aceptaMP"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@id/nuevo_usado"
+                    android:layout_centerHorizontal="true"
+                    android:text="Acepta Mercado Pago " />
+
+                <TextView
+                    android:id="@+id/modo_entrega"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@id/nuevo_usado"
+                    android:layout_centerHorizontal="true"
+                    android:text="Entrega Inmediata " />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/zonaLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/cantidad_vendidos_text"
-                android:layout_toRightOf="@id/cantidad_vendidos_text"
-                android:text="" />
+                android:layout_below="@id/pago"
+                android:layout_centerHorizontal="true">
 
-            <TextView
-                android:id="@+id/cantidad_actual_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/cantidad_vendidos_text"
-                android:layout_alignStart="@id/cantidad_vendidos_text"
-                android:text="Cantidad en Stock:" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ubicacion: " />
 
-            <TextView
-                android:id="@+id/cantidad_actual"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/cantidad_actual_text"
-                android:layout_toRightOf="@id/cantidad_actual_text"
-                android:text="" />
+                <TextView
+                    android:id="@+id/zona"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:text="La Matanza" />
 
-        </RelativeLayout>
+            </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/pago"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/stock"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:id="@+id/aceptaMP"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/nuevo_usado"
-                android:layout_centerHorizontal="true"
-                android:text="Acepta Mercado Pago " />
-
-            <TextView
-                android:id="@+id/modo_entrega"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/nuevo_usado"
-                android:layout_centerHorizontal="true"
-                android:text="Entrega Inmediata " />
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/zonaLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/pago"
-            android:layout_centerHorizontal="true">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Ubicacion: " />
-
-            <TextView
-                android:id="@+id/zona"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="La Matanza"
-                android:layout_marginBottom="20dp"
-                />
-
-        </LinearLayout>
-
-    </LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
