--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context=".SerchActivity">
 
     <EditText
@@ -14,10 +15,12 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="58dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="51dp"
-        android:hint="@string/et_buscar" />
+        android:layout_marginEnd="53dp"
+        android:hint="@string/et_buscar"
+        android:textColor="#ffffff"
+        />
 
     <ImageView
         android:id="@+id/imageViewML"
@@ -31,8 +34,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="67dp"
         android:contentDescription="@string/img_logo"
-        app:srcCompat="@drawable/mercadolibre1"
-        />
+        app:srcCompat="@drawable/mercadolibre1" />
 
     <Button
         android:id="@+id/btn_buscar"
